@@ -38,7 +38,7 @@ This function performs a regression where topic-proportions are the outcome vari
 
 The formula specifies the nature of the linear model.  On the left hand-side we use a vector of integers to indicate the topics to be included as outcome variables.  If left blank then the default of all topics is used. On the right hand-side we can specify a linear model of covariates including standard transformations.  Thus the model \code{2:4 ~ var1 + s(var2)} would indicate that we want to run three regressions on Topics 2, 3 and 4 with predictor variables \code{var1} and a b-spline transformed \code{var2}.  We encourage the use of spline functions for non-linear transformations of variables.
 
-The function allows the user to specify any variables in the model.  However, we caution that for the assumptions of the method of composition to be the most plausible the topic model should contain at least all the covariates contained in the \code{estimateEffect} regression.  However the inverse need not be true.
+The function allows the user to specify any variables in the model.  However, we caution that for the assumptions of the method of composition to be the most plausible the topic model should contain at least all the covariates contained in the \code{estimateEffect} regression.  However the inverse need not be true.  The function will automatically check whether the covariate matrix is singular which generally results from linearly dependent columns.  Some common causes include a factor variable with an unobserved level, a spline with degrees of freedom that are too high, or a spline with a continuous variable where a gap in the support of the variable results in several empty basis functions.
 
 We offer several different methods of incorporating uncertainty.  Ideally we would want to use the covariance matrix that governs the variational posterior for each document (\eqn{\nu}).  The updates for the global parameters rely only on the sum of these matrices and so we do not store copies for each individual document.  The default uncertainty method \code{Global} uses an approximation to the average covariance matrix formed using the global parameters.  The uncertainty method \code{Local} steps through each document and updates the parameters calculating and then saving the local covariance matrix.  The option \code{None} simply uses the map estimates for \eqn{\theta} and does not incorporate any uncertainty.  We strongly recommend the \code{Global} approximation as it provides the best tradeoff of accuracy and computational tractability.
 }
